# sql_a_example

./: .gitignore  Makefile  README.md  pyproject.toml
python_playground/: main.py  models.py
sql_a_example/: main.py  models.py
