[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Stephen <sonnen@coviance.com>"]
readme = "README.md"
packages = [{ include = "python_playground" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.3.0"
python-jose = "^3.3.0"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
types-python-jose = "^3.3.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
